plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
//    id 'org.springframework.boot' version '3.3.0' // 예시: 안정적인 버전으로 변경
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.minute'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0' // 단일 버전으로 수정
    implementation 'org.springframework.boot:spring-boot-starter-validation' // 유효성 검사 라이브러리 추가
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.3'


    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'



}

tasks.named('test') {
    useJUnitPlatform()
}